--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,20 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: psql
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.psql
+  database: db/development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.psql
+  database: db/test
 production:
   <<: *default
-  database: db/production.psql
+  database: db/production
